# lanedetect_android_ncnn

./: README.md  local.properties
app/: build.gradle
app/src/androidTest/java/com/example/lanedetect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/lanedetect/: LaneDetectNcnn.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  lane.cpp  lane.h  lanedetect_jni.cpp
app/src/test/java/com/example/lanedetect/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
